--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@trpc/client": "^10.34.0",
     "@trpc/server": "^10.34.0",
     "@types/node": "^20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "clsx": "^2.1.1",
     "eslint": "^8.42.0",
     "eslint-config-next": "13.4.9",
     "next": "13.4.9",
