--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,7 +13,7 @@
     "start": "nest start",
     "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node --max-old-space-size=512 --optimize-for-size --gc-interval=100 --max-semi-space-size=2 dist/main",
     "migrate": "pnpm prisma migrate dev",
     "studio": "pnpm prisma studio",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
