--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -29,6 +29,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "4.16.2",
     "@trpc/server": "^10.34.0",
+    "@types/form-data": "^2.5.0",
+    "form-data": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "zod": "^3.21.4"
