--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "eslint": "^8.42.0",
     "eslint-config-next": "13.4.9",
