--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -20,18 +20,12 @@
     "prettier"
   ],
   "rules": {
+    "id-length": 0,
+    "no-constant-condition": 0,
     "@typescript-eslint/no-unused-vars": 2,
     "@typescript-eslint/no-explicit-any": 2,
-    "id-length": [
-      2,
-      {
-        "exceptions": [
-          "i"
-        ]
-      }
-    ],
     "@typescript-eslint/naming-convention": [
-      2,
+      1,
       {
         "selector": "interface",
         "format": [
