--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "10.4.14",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
@@ -26,6 +27,8 @@
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
   },
