--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,7 +30,10 @@
     "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
     "tailwindcss": "3.3.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vega": "^5.30.0",
+    "vega-embed": "^6.26.0",
+    "vega-lite": "^5.21.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.48.2",
