--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -25,11 +25,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "4.16.2",
     "@trpc/server": "^10.34.0",
     "@types/form-data": "^2.5.0",
+    "axios": "^1.7.7",
     "form-data": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
