--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/lang-python": "^6.2.1",
     "@heroicons/react": "^2.1.5",
     "@trpc/client": "^10.34.0",
     "@trpc/server": "^10.34.0",
@@ -18,6 +19,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@uiw/react-codemirror": "^4.23.14",
     "autoprefixer": "10.4.14",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
@@ -28,7 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
-    "react-syntax-highlighter": "^15.5.0",
+    "react-syntax-highlighter": "^15.6.1",
     "tailwindcss": "3.3.2",
     "typescript": "^5.1.3",
     "vega": "^5.30.0",
