--- a/apps/web/.env.local
+++ b/apps/web/.env.local
@@ -4,3 +4,5 @@ NEXT_PUBLIC_NESTJS_SERVER=http://localhost:4000
 
 # dev | test | prod
 NEXT_PUBLIC_ENV=dev
+
+NEXT_PUBLIC_CHAT_BASE_URL=http://localhost:4000
