--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -33,6 +33,7 @@
     "@types/form-data": "^2.5.0",
     "axios": "^1.7.7",
     "form-data": "^4.0.0",
+    "node-fetch": "2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "zod": "^3.21.4"
@@ -44,6 +45,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/node-fetch": "2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
