--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,7 +8,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "postinstall": "prisma generate --schema=./prisma/schema.prisma",
-    "build": "nest build",
+    "build": "nest build && cp -r src/rules dist/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "dev": "nest start --watch",
@@ -33,6 +33,7 @@
     "@types/form-data": "^2.5.0",
     "axios": "^1.7.7",
     "form-data": "^4.0.0",
+    "js-yaml": "^4.1.0",
     "node-fetch": "2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -44,6 +45,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.3.1",
     "@types/node-fetch": "2",
     "@types/supertest": "^2.0.12",
