--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "eslint": "^8.42.0",
     "eslint-config-next": "13.4.9",
+    "js-yaml": "^4.1.0",
     "next": "14.2.5",
     "postcss": "8.4.25",
     "react": "18.2.0",
@@ -38,6 +39,7 @@
     "vega-lite": "^5.21.0"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "daisyui": "^3.2.1",
     "eslint-config-prettier": "^8.6.0",
